added billcalculator fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoGreen">
-        <activity android:name=".activityclass.i_btninfo"></activity>
+        <activity android:name=".activityclass.tipsinfo"></activity>
+        <activity android:name=".activityclass.billtips" />
+        <activity android:name=".activityclass.checkyourbill" />
+        <activity android:name=".activityclass.i_btninfo" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,7 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activityclass.MainActivity"></activity>
+        <activity android:name=".activityclass.MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
