--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoGreen">
-        <activity android:name=".activityclass.tipsinfo"></activity>
+        <activity android:name=".govn_scheme"></activity>
+        <activity android:name=".activityclass.tipsinfo" />
         <activity android:name=".activityclass.billtips" />
         <activity android:name=".activityclass.checkyourbill" />
         <activity android:name=".activityclass.i_btninfo" />
